	modules to convert known namespaces/elements/attributes to list. This
	benefits from Erlang constants handling and decreases memory
	footprint. Thanks to Pablo Polvorin.

	* src/core/exmpp_xml.erl: Use the new modules to convert known
	namespaces/elements/attributes. Thanks to Pablo Polvorin.
	(node_to_list/3, node_to_binary/3): Remove specific code and use
	node_to_iolist/3.

2008-12-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/exmpp_known_nss.hrl.awk,
	include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.awk,
	include/internal/exmpp_known_elems.hrl.js,
	include/internal/exmpp_known_attrs.hrl.awk,
	include/internal/exmpp_known_attrs.hrl.js: Fix headers generation to
	remove duplicates. Thanks to Pablo Polvorin.

2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/exmpp_compress.h, c_src/exmpp_compress_zlib.c,
	c_src/exmpp_tls.h, c_src/exmpp_tls_openssl.c, c_src/Makefile.am: Use
	exmpp_driver.c and remove duplicate code.

	* c_src/exmpp_xml_expat_legacy.c, c_src/exmpp_xml_libxml2.c,
	c_src/exmpp_xml_expat.c: style(9).

	* src/core/exmpp_stringprep.erl: When a binary() is given in argument,
	return a binary() too. If the result of STRINGPREP is the same as the
	original string, return the latter and throw away the former; thanks
	to Pablo Polvorin.

	* c_src/exmpp_stringprep.c, c_src/Makefile.am: Use exmpp_driver.h.
	Remove start/stop callbacks and the private data structure as they're
	unused. Rename commands to COMMAND_*.

	* c_src/exmpp_stringprep.c: style(9).

2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Fixed several warnings issued by Intel C Compiler.

	NOTE: With current options, code produced by this compiler is much
	bigger for no performance gain.

	* c_src/exmpp_driver.h, c_src/exmpp_xml.h: Fix "old-style" prototypes.

	* c_src/exmpp_driver.c: prime_table_length must be static.
	(exmpp_ht_dump_keys): Fix a printf(3) format string to properly handle